[project]
name = "ml-url-classifier"
version = "0.1.0"
description = "ML-Optimized URL Classifier with Contextual Awareness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "mitmproxy>=10.0.0",
]

[project.optional-dependencies]
proxy = [
    "mitmproxy>=10.0.0",
]
ml = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
]

[dependency-groups]
dev = []
